# MAARS

./: 00-master-system-prompt.md  00-phase-0-ideation-inception.md  01-phase-1-requirements.md  01_5-phase-1_5-api-interface-design.md  02-phase-2-architecture.md  02_5-phase-2_5-database-design.md  03-phase-3-ux-ui-design.md  04-phase-4-development.md  05-phase-5-security-review.md  05_5-phase-5_5-integration-e2e-testing.md  06-phase-6-qa-testing.md  06_5-phase-6_5-data-migration-seeding.md  07-phase-7-deployment-release.md  07_5-phase-7_5-beta-preview.md  08-phase-8-post-launch.md  08_5-phase-8_5-incident-response-runbooks.md  09-phase-9-training-documentation-change-mgmt.md  10-phase-10-retrospective-continuous-learning.md  HOWTOUSETHISLIBRARY.md  ORDER-OF-OPERATIONS.md  README.md  cc-cross-cutting-concerns.md  maarsprompt.md  maarspromptpatch.md  phase1:mastersystemprompt.md
.github/workflows/: dashboard-ci.yml
dashboard/: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
dashboard/core/: Cargo.toml
dashboard/core/src/: audit.rs  contracts.rs  db.rs  engine.rs  fs_service.rs  lib.rs  llm.rs  orchestrator.rs  phases.rs  providers.rs  routing.rs  scoring.rs
dashboard/core/tests/: engine.rs  phase0.rs
dashboard/src/: App.tsx  theme.css
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: commands.rs  main.rs
dashboard/src/features/workspace/stream/: Cards.tsx
dashboard/src/lib/types/: contracts.ts
dashboard/src/stores/: useDashboardStore.ts
meta-agents/: 01-continuity-agent.md  02-research-agent.md  03-scoring-aggregator.md  04-remediation-agent.md  05-arbitration-agent.md  06-living-document-agent.md  07-phase-snapshot-agent.md
