[package]
name = "maars_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "maars_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
